@@ -1,6 +1,7 @@
 v0.2.0, 2022-07-18
 -- Can pass parameter 'max_combinations' to gnies.utils.all_dags to return an error if the max. number of possible DAGs is too large
 -- Refactoring of the fit functions in gnies.main; module API has changed
+-- New functions utils.an and utils.desc, and corresponding tests
 v0.1.1, 2022-07-07
 -- Fixed wrong version number
 v0.1.0, 2022-07-07
